# jabfy-core

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: routes_actions.py  routes_health.py  routes_models.py
app/core/: __init__.py  action_orchestrator.py  action_parser.py  config.py  ollama_client.py  prompt_builder.py  verification.py
app/schemas/: __init__.py  actions.py  devices.py  models.py
app/simulation/: __init__.py  smart_home_devices.py
tests/: test_action_parser.py  test_prompt_builder.py  test_verification.py
