[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jabfy-core"
version = "0.1.0"
description = "Local-first Smart Home orchestration core for JABFY"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "ollama>=0.4,<1.0",
    "pydantic>=2.10,<3.0",
    "python-dotenv>=1.0,<2.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
